--- a/src/main/resources/templates/edit-project.html
+++ b/src/main/resources/templates/edit-project.html
@@ -86,12 +86,12 @@
         </div>
 
         <div class="form-group">
-          <label for="status">Status</label>
-          <select id="status" th:field="*{status}">
-            <option th:each="status : ${statuses}" 
-                    th:value="${status}" 
-                    th:selected="${project.status == status}"
-                    th:text="${#strings.replace(status.name(), '_', ' ')}"></option>
+          <label for="priority">Prioritet</label>
+          <select id="priority" th:field="*{priority}">
+            <option th:each="p : ${priorities}" 
+                    th:value="${p}" 
+                    th:selected="${project.priority == p}"
+                    th:text="${#strings.replace(p.name(), '_', ' ')}"></option>
           </select>
         </div>
 
