--- a/src/main/resources/templates/svend-projects.html
+++ b/src/main/resources/templates/svend-projects.html
@@ -31,6 +31,7 @@
         <tr>
           <th>Projektnavn</th>
           <th>Beskrivelse</th>
+          <th>Prioritet</th>
           <th>Deadline</th>
           <th>Handling</th>
         </tr>
@@ -42,10 +43,21 @@
         <tr th:each="project : ${myProjects}">
           <td th:text="${project.name}"></td>
           <td th:text="${project.description ?: 'Ingen beskrivelse'}"></td>
+          <td th:text="${project.priority != null ? #strings.replace(project.priority.name(),'_',' ') : 'Ingen'}"></td>
           <td th:text="${project.startDate}"></td>
           <td>
             <a th:href="@{/svend/projects/{id}/log-hours(id=${project.id})}" class="btn-small">Registrer Timer</a>
-            <a href="#" class="btn-small">Tag Billede</a>
+            <a th:href="@{/svend/projects/{id}/photo(id=${project.id})}" class="btn-small">Tag Billede</a>
+            <form th:action="@{/svend/projects/{id}/status(id=${project.id})}" method="post" style="display:inline-block;margin-left:6px;">
+              <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+              <input type="hidden" name="status" value="IN_PROGRESS"/>
+              <button type="submit" class="btn-small" style="background-color:#795548;">Startet/I gang</button>
+            </form>
+            <form th:action="@{/svend/projects/{id}/status(id=${project.id})}" method="post" style="display:inline-block;margin-left:6px;">
+              <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+              <input type="hidden" name="status" value="FINISHED"/>
+              <button type="submit" class="btn-small" style="background-color:#4CAF50;">Færdig</button>
+            </form>
           </td>
         </tr>
         </tbody>
