--- a/src/main/resources/templates/edit-project.html
+++ b/src/main/resources/templates/edit-project.html
@@ -84,6 +84,11 @@
           <label for="startDate">Startdato</label>
           <input type="date" id="startDate" th:field="*{startDate}"/>
         </div>
+        
+        <div class="form-group">
+          <label for="startTime">Starttid</label>
+          <input type="time" id="startTime" th:field="*{startTime}"/>
+        </div>
 
         <div class="form-group">
           <label for="priority">Prioritet</label>
