--- a/src/main/resources/templates/svend-projects.html
+++ b/src/main/resources/templates/svend-projects.html
@@ -61,18 +61,20 @@
           <td th:text="${project.startTime != null ? #temporals.format(project.startTime, 'HH:mm') : 'Ikke sat'}"></td>
           <td th:text="${project.startDate}"></td>
           <td>
-            <a th:href="@{/svend/projects/{id}/log-hours(id=${project.id})}" class="btn-small">Registrer Timer</a>
-            <a th:href="@{/svend/projects/{id}/photo(id=${project.id})}" class="btn-small">Tag Billede</a>
-            <form th:action="@{/svend/projects/{id}/status(id=${project.id})}" method="post" style="display:inline-block;margin-left:6px;">
-              <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-              <input type="hidden" name="status" value="IN_PROGRESS"/>
-              <button type="submit" class="btn-small" style="background-color:#795548;">Startet/I gang</button>
-            </form>
-            <form th:action="@{/svend/projects/{id}/status(id=${project.id})}" method="post" style="display:inline-block;margin-left:6px;">
-              <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-              <input type="hidden" name="status" value="FINISHED"/>
-              <button type="submit" class="btn-small" style="background-color:#4CAF50;">Færdig</button>
-            </form>
+            <div class="btn-group">
+              <a th:href="@{/svend/projects/{id}/log-hours(id=${project.id})}" class="btn-small">Registrer Timer</a>
+              <a th:href="@{/svend/projects/{id}/photo(id=${project.id})}" class="btn-small">Tag Billede</a>
+              <form th:action="@{/svend/projects/{id}/status(id=${project.id})}" method="post">
+                <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <input type="hidden" name="status" value="IN_PROGRESS"/>
+                <button type="submit" class="btn-small secondary">Startet/I gang</button>
+              </form>
+              <form th:action="@{/svend/projects/{id}/status(id=${project.id})}" method="post">
+                <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <input type="hidden" name="status" value="FINISHED"/>
+                <button type="submit" class="btn-small success">Færdig</button>
+              </form>
+            </div>
           </td>
         </tr>
         </tbody>
